--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.application.name=backend
 server.port=8080
 server.servlet.context-path=/api
 
-# Database Configuration - IT342 database, no password
-spring.datasource.url=jdbc:mysql://localhost:3306/IT342?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&nullCatalogMeansCurrent=true
+# Database Configuration - IT342 database
+spring.datasource.url=jdbc:mysql://localhost:3306/it342?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&nullCatalogMeansCurrent=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
